feat: implement country filter
